# Requirements Updated
qbittorrent-api==2024.11.70

**Full Changelog**: https://github.com/StuffAnThings/qbit_manage/compare/v4.1.13...v4.1.14