@@ -1,10 +1,10 @@
 {
     "master": {
-        "qbit": "v5.0.1",
-        "qbitapi": "2024.10.68"
-    },
-    "develop": {
         "qbit": "v5.0.2",
         "qbitapi": "2024.11.70"
+    },
+    "develop": {
+        "qbit": "v5.0.3",
+        "qbitapi": "2024.12.71"
     }
 }
