@@ -1,10 +1,10 @@
 bencodepy==0.9.5
-croniter==5.0.1
-GitPython==3.1.43
+croniter==6.0.0
+GitPython==3.1.44
 humanize==4.11.0
 pytimeparse2==1.7.1
-qbittorrent-api==2024.11.70
+qbittorrent-api==2024.12.71
 requests==2.32.3
 retrying==1.3.4
-ruamel.yaml==0.18.6
+ruamel.yaml==0.18.8
 schedule==1.2.2
