@@ -1,4 +1,7 @@
 # Requirements Updated
-qbittorrent-api==2024.11.70
+qbittorrent-api==2024.12.71
 
-**Full Changelog**: https://github.com/StuffAnThings/qbit_manage/compare/v4.1.13...v4.1.14
+# Bug Fixes
+- Additional unregistered messages added (Fixes #719)
+
+**Full Changelog**: https://github.com/StuffAnThings/qbit_manage/compare/v4.1.14...v4.1.15
